<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BizCat Activity!</string>
    <string name="app_name">BIzCat</string>
    
    <string name="setting">설정</string>
    <string name="setting_faq">FAQ</string>
    <string name="setting_howtouse">BizCat 이용방법</string>
    <string name="setting_intro_movie">소개동영상</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_myinfo">내 정보</string>
    <string name="setting_myinfo_footer">대학교 이메일로 인증시 학교로고가 상대방에게 보여집니다.</string>
    <string name="setting_notice">공지사항</string>
    <string name="setting_notify">알림설정</string>
    <string name="setting_version">버전정보</string>
    
    <string name="setting_cert_email">이메일 인증</string>
    <string name="setting_cert_facebook">페이스북 인증</string>
    <string name="setting_cert_phone">휴대폰 인증</string>
    <string name="_">피아노 레슨</string>
    <string name="setting_terms_and_condition">BizCat 이용약관</string>
    <string name="setting_privacy">개인정보취급 방침 및 청소년 보호정책</string>
    <string name="setting_location">위치기반서비스 이용약관</string>
    
</resources>