<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/STbtnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/setting_logout" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/setting" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/RelativeLayout2" >


        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        	<Button
	            android:id="@+id/STbtnProfile"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentTop="true"
	            android:text="내 정보" />
        
            <Button
                android:id="@+id/STbtnNotice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_notice" />

            <Button
                android:id="@+id/STbtnPush"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_notify" />

            <Button
                android:id="@+id/STbtnIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_intro_movie" />

            <Button
                android:id="@+id/STbtnHowtouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_howtouse" />

            <Button
                android:id="@+id/STbtnFaq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_faq" />

            <Button
                android:id="@+id/STbtnVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_version" />

            <Button
                android:id="@+id/STbtnTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="와블 이용약관" />

            <Button
                android:id="@+id/STbtnPrivacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="개인정보취급방침 및 청소년 보호정책" />

            <Button
                android:id="@+id/STbtnLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="위치기반서비스 이용약관" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>